fix: remove método inutilizado